# HSPsquared

./: .gitattributes  .gitignore  CONTRIBUTING  CONTRIBUTING.md  HSP2_Driver.py  README.md  README.rst  _version.py  environment.yml  environment_dev.yml  publish.py  pyproject.toml  setup.py
.github/actions/setup-python/: action.yml
.github/workflows/: hsp2-conda-install-test-dev.yml  hsp2-install-dev.yml  hsp2-install-test-dev.yml  hsp2-install-test.yml  hsp2-pip-install-test-dev.yml  hsp2-pip-install-test.yml  hsp2_dev_env  python-app.yml  python-app1.yml
.virtual_documents/HSP2notebooks/: Untitled.ipynb
HSP2/: ACIDPH.py  ADCALC.py  ATEMP.py  CONS.py  COPY.py  GENER.py  GQUAL.py  HTRCH.py  HYDR.py  IQUAL.py  IWATER.py  IWTGAS.py  NUTRX.py  NUTRX_Class.py  OXRX.py  OXRX_Class.py  PHCARB.py  PHCARB_Class.py  PLANK.py  PLANK_Class.py  PQUAL.py  PSTEMP.py  PWATER.py  PWTGAS.py  RQUAL.py  RQUAL_Class.py  RQUTIL.py  SEDMNT.py  SEDTRN.py  SNOW.py  SOLIDS.py  SPECL.py  __init__.py  _version.py  configuration.py  himpwat.py  hperair.py  hpersno.py  hperwat.py  hrchhyd.py  (+17 more)
HSP2IO/: base.py  hdf.py  io.py  protocols.py
HSP2notebooks/: 2_DataVisualizationDemo.ipynb  Demo1.ipynb  How Do I Run HSP2, Change Parameters, and Run Again .ipynb  Introduction.ipynb  Jason's Introduction.ipynb  Preview.ipynb  Test Migration of HSPF to HSP2.ipynb  Tutorial 1.ipynb  Tutorial 2.ipynb  Tutorial 3.ipynb  Tutorial 4.ipynb  Tutorial 5.ipynb  Tutorial 6.ipynb  Tutorial 7 .ipynb  Tutorial 8.ipynb  ViewIMPLND.ipynb  ViewPERLND.ipynb  ViewRCHRES.ipynb
HSP2notebooks/DataSource/: FT1.csv  PERLND.csv  RCHRES.csv  RCHRES.xlsx  rch900.6
HSP2notebooks/LegalInformation/: HSPF.txt  License.txt  ReadMe.txt
HSP2notebooks/TutorialData/: RCHRESexample.csv
HSP2notebooks/Utilities/: graph_example.py
HSP2tools/: HBNOutput.py  HDF5.py  HSP2_CLI.py  SegmentExpander.py  __init__.py  clone.py  commands.py  convenience.py  csvReader.py  fetch.py  graph.py  hydrology_cleanup.py  mainTutorial.py  makeHSP2h5.py  readHBN - Copy.py  readHBN.py  readUCI.py  readWDM.py  restart.py  uciReader.py  utility.py  versioninfo.py  waterbalance.py  wdmReader.py
HSP2tools/HSP2Data/: HSP2.h5  RCHRES.SEQ
HSP2tools/data/: HBNAliases.csv  Implnd.seq  PERLND.SEQ  ParseTable.csv  SaveTable.csv  rename.csv
docs/: HSPF_v12.2_manual+nav.docx
examples/: 1_Intro_to_HSP2.ipynb  2_ExploreResultsHDF5.ipynb  Demo1.ipynb  Demo3.ipynb  HDF5_for_HSP2.ipynb  Tutorial1.ipynb  Tutorial1.md  __init__.py
examples/archive/: Demo2.ipynb
hspfbintoolbox/: __init__.py  hspfbintoolbox.py
hspfbintoolbox-1.4.8.0-py2.7.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  installed-files.txt  requires.txt  top_level.txt
mando-0.3.3.dist-info/: DESCRIPTION.rst  METADATA  RECORD  metadata.json
src/hsp2/hsp2/: ADCALC.py  ATEMP.py  CONS.py  COPY.py  GENER.py  GQUAL.py  HTRCH.py  HYDR.py  IQUAL.py  IWATER.py  IWTGAS.py  NUTRX_Class.py  OXRX_Class.py  PHCARB_Class.py  PLANK_Class.py  PQUAL.py  PSTEMP.py  PWATER.py  PWTGAS.py  RQUAL.py  RQUAL_Class.py  SEDMNT.py  SEDTRN.py  SNOW.py  SOLIDS.py  SPECL.py  __init__.py  configuration.py  main.py  mainDoE.py  om.py  om_model_linkage.py  om_model_object.py  om_sim_timer.py  om_special_action.py  state.py  state_fn_defaults.py  uci.py  utilities.py
src/hsp2/hsp2io/: hdf.py  io.py  protocols.py
src/hsp2/hsp2tools/: HBNOutput.py  HDF5.py  HSP2_CLI.py  __init__.py  commands.py  graph.py  readCSV.py  readHBN.py  readUCI.py  readWDM.py  restart.py
t-archive/Calleg/HSP2compare_monthly/: CompareHSP2.ipynb
t-archive/ZRW_WestIndian/: HSPF.WDM
t-archive/land_spec/: hwmA51800.uci  hwmA51800.wdm
t-archive/test09/HSP2compare/: CompareHSP2.ipynb
t-archive/test09/HSPFresults/: ERROR.FIL  Run HSPF.ipynb  test09.d65
t-archive/test10/: test.ipynb
t-archive/test10/HSPFresults/: test10.p94  test10I.hbn
t-archive/test10/notebooks-py2/: ViewIMPLND.ipynb  ViewPERLND.ipynb
t-archive/test10b/HSP2results/: CompareHSP2.html
t-archive/test10b/HSPFresults/: test10.d66  test10.p94
t-archive/testcbp/HSP2results/: PL3_5250_0001.uci  ps_sep_div_ams_hsp2_2022_PL3_5250_0001.wdm
tests/: .gitignore  HDF5_compare.ipynb  instruction.txt  test_regression.py  test_report_conversion.html
tests-archive/Calleg/notebooks-py2/: Build and Run.html  TESTcalleg.html
tests-archive/test09/HSP2compare/: TEST09.UCI  TEST09bin.UCI
tests-archive/test09/HSPFresults/: TEST09bin.UCI
tests-archive/test10b/HSPFresults/: ERROR.FIL  Run HSPF.ipynb  test10.hbn
tests/Calleg/: TESTcalleg.html  TESTcalleg.ipynb  calleg.uci
tests/Calleg/HSP2compare_monthly/: CompareHSP2.ipynb  calleg.uci
tests/Calleg/HSPFresults/: Run HSPF.ipynb  TESTcalleg.html
tests/Calleg/HSPFresults_monthly/: ERROR.FIL  Run HSPF.ipynb  Run_HSPF.ipynb  calleg.uci
tests/Calleg/notebooks-py2/: Build and Run.ipynb  Build_and_Run.html  Build_and_Run.ipynb  TESTcalleg.html  TESTcalleg.ipynb  Test Migration of HSPF to HSP2.ipynb  Test_Migration_of_HSPF_to_HSP2.ipynb
tests/GRW_Plaster/: HSPF.uci
tests/ZRW_WestIndian/: HSPF.uci  ZUMBROSCEN.WDM
tests/convert/: conversion_test.py  regression_base.py
tests/ipwater/: test_ipwater.py
tests/ipwater/data/: Flow_Test.plt  HSPF_Test240.uci  make_uci_data.py  (+1 more)
tests/land_spec/: prad_A51800.wdm
tests/ptest/: test_sysexit.py
tests/test10/: logfile.txt  test.ipynb
tests/test10specl/: test.ipynb
tests/test_cbp_river/: PL3_5250_0001.out  PL3_5250_0001.uci  PL3_5250_0001.wdm  prad_A51059.wdm  problem
tstoolbox/: fill_functions.py  filters.py  peakdetect.py  tstoolbox.py  tsutils.py
tstoolbox-0.9.9.6-py2.7.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  installed-files.txt  requires.txt  top_level.txt
wdmtoolbox/: __init__.py  wdm.py  wdm.pyd  wdmutil.py
(+88 files in other folders)
