[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "oldest-supported-numpy"
]

[project]
name = "hsp2"
dynamic = ["version", "readme"]
description = "Hydrological Simulation Program - Python"
dependencies = [
    "mando",
    "numba",
    "pandas",
    "tables"
]
authors = [
    {name = "RESPEC, Inc", email = "Paul.Duda@respec.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "hydrology",
    "hydrological",
    "hydraulic",
    "hspf",
    "simulation",
    "python",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"

[project.scripts]
hsp2 = "HSP2tools.HSP2_CLI:main"

[project.urls]
documentation = "http://www.respec.com/product/hydrologic-simulation-program-python-hsp%C2%B2/"
github = "https://github.com/respec/HSPsquared"

[tool.check-manifest]
ignore = [
    "docs/_function_autosummary/*",
    ".coverage",
    ".deepsource.toml",
    ".ipynb_checkpoints/*"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.11.0a1"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "tools*", "docs*"]
where = ["HSP2", "HSP2tools", "HSP2IO"]

[tool.setuptools_scm]
